# dope-filterbank-ui

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN-PROMPT-V3.md  DESIGN-PROMPT.md  index.html  script.js  styles.css
assets/WebUI/: index.html  script.js  styles.css
docs/: DESIGN-GUIDE.md  UI-TECHNICAL-AUDIT.md
docs/plans/: 2026-03-15-distortion-plugin-design.md  2026-03-15-implementation-plan.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AMFilter.cpp  AMFilter.h  CombFilter.cpp  CombFilter.h  DelayReverb.cpp  DelayReverb.h  Distortion.cpp  Distortion.h  EQFilter.cpp  EQFilter.h  FMFilter.cpp  FMFilter.h  FeedbackPath.cpp  FeedbackPath.h  FilterEngine.cpp  FilterEngine.h  FilterRouter.cpp  FilterRouter.h  FormantFilter.cpp  FormantFilter.h  LadderFilter.cpp  LadderFilter.h  Limiter.cpp  Limiter.h  Oversampler.cpp  Oversampler.h  PhaserFilter.cpp  PhaserFilter.h  Resonator.cpp  Resonator.h  SVFilter.cpp  SVFilter.h  SpecialFilter.cpp  SpecialFilter.h  VocalFilter.cpp  VocalFilter.h
src/gui/: FilterDisplay.cpp  FilterDisplay.h  KnobLookAndFeel.cpp  KnobLookAndFeel.h  SectionComponent.h  Theme.h
src/modulation/: EnvFollower.cpp  EnvFollower.h  Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  ModMatrix.cpp  ModMatrix.h  StepSequencer.cpp  StepSequencer.h
tests/dsp/: AllFiltersTest.cpp  SVFilterTest.cpp
tools/: extract_knob.py  generate_knob_filmstrip.py  prepare_full_ui.py  prepare_knob.py  prepare_knob2.py  render_mockup.py  render_mockup_v2.py  render_mockup_v3.py
